# packify

./: .gitignore  changelog.md  dox.md  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: release_checklist.md
packify/: SKILL.md  __init__.py  cli.py  interface.py  serialization.py  version.py
tests/: test_fuzzy.py  test_serialization.py
