[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packify"
version = "0.3.3"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Serialize and deserialize almost anything easily."
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
packify = "packify.cli:main"

[project.urls]
"Homepage" = "https://pycelium.com"
"Repository" = "https://github.com/k98kurz/packify"
"Bug Tracker" = "https://github.com/k98kurz/packify/issues"

[tool.hatch.build.targets.wheel]
exclude = [
  "/tests",
  ".github",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  ".github",
]
